# ecowater-data-research

./: .gitignore  Makefile  README.md  aqui.ipynb  pyproject.toml  secheresses.ipynb
ecowater_data_research/: loaders.py  transformers.py
notebooks/: aqui.ipynb  copernicus.ipynb  nouveaux_contours.ipynb
