[tool.poetry]
name = "ecowater-data-research"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "ecowater_data_research"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
numpy = "^1.24.2"
ipykernel = "^6.21.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
