[tool.poetry]
name = "ecowater-data-research"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "ecowater_data_research"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
numpy = "^1.24.2"
ipykernel = "^6.22.0"
cdsapi = "^0.6.1"
python-dotenv = "^1.0.0"
plotly = "^5.14.1"
nbformat = "^5.8.0"
geopandas = "^0.12.2"
pyshp = "^2.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
